VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp.clang-tidy.loop-label.out.log
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:2257:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:2257:5: note: FIX-IT applied suggested code changes
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:2271:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:2271:5: note: FIX-IT applied suggested code changes
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:2285:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:2285:5: note: FIX-IT applied suggested code changes
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:4253:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:4253:7: note: FIX-IT applied suggested code changes
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:6421:42: error: Invalid Directive: for current device, ram_2p + BRAM is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=u type=ram_2p impl=BRAM
                                         ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/endtoend.pp.0.cpp:6422:42: error: Invalid Directive: for current device, ram_2p + URAM is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=V type=ram_2p impl=URAM
                                         ^
